--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<div class=" login-container">
+    <form (ngSubmit)="onSubmit()" [formGroup]="form" autocomplete="off">
+
+        <mat-form-field appearance="outline">
+            <mat-label>Username</mat-label>
+            <input matInput placeholder="Username" type="text" (input)="updateErrorMessage('Username')"
+                formControlName="Username">
+            <mat-error>{{errorMessages.username()}}</mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="Password" type="text" (input)="updateErrorMessage('Password')"
+                formControlName="Password">
+            <mat-error>{{errorMessages.password()}}</mat-error>
+        </mat-form-field>
+
+        @if (mode=== 'register') {
+
+        <mat-form-field appearance="outline">
+            <mat-label>confirm_Password</mat-label>
+            <input matInput placeholder="confirm_password" type="password"
+                (input)="updateErrorMessage('confirm_password')" formControlName="confirm_password">
+            <mat-error>{{errorMessages.confirm_password()}}</mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <mat-label>Date of birth</mat-label>
+            <input matInput placeholder="confirm_Password" formControlName="Password">
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker startView="year" [startAt]="startDate"></mat-datepicker>
+            <mat-error>{{errorMessages.password()}}</mat-error>
+        </mat-form-field>
+        }
+        <button mat-flat-button [disabled]="form.invalid">Login</button>
+    </form>
+    <div class="login-spacer">or</div>
+    @if (mode=== 'login') {
+    <div class="toggle">New to MyApp <span (click)="toggleMode()">Sing Up</span></div>
+    }
+
+</div>
