--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -11,8 +11,30 @@
 
     <!-- <span>My App</span> -->
     <span class="my-spacer"></span>
+    @if (user() === undefined){
     <button routerLink="/login">
         <mat-icon>login</mat-icon>
         <span>Login</span>
     </button>
+    }
+    @if (user()){
+    <button>
+
+        <span>Folower</span>
+    </button>
+    <button>
+
+        <span>Folowing</span>
+    </button>
+    }
+    <button mat-button [matMenuTriggerFor]="menu">{{user()?.display_name}}</button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>Item 1</button>
+        <button mat-menu-item>Item 2</button>
+        <button (click)="logOut()">
+            <mat-icon>logOut</mat-icon>
+            <span>logOut</span>
+        </button>
+    </mat-menu>
+
 </mat-toolbar>
