--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <ngx-spinner>
+    <p style="color: blueviolet;">🎶Loading</p>
+  </ngx-spinner>
   <app-header></app-header>
   <div class="content">
     <router-outlet></router-outlet>
