--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -2,39 +2,41 @@
     <button class="home-button" routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
         <span>Tinner</span>
     </button>
-    <button routerLink='/members' routerLinkActive="active" ariaCurrentWhenActive="page">
+    <!-- <button routerLink="/members" routerLinkActive="active" ariaCurrentWhenActive="page">
         <span>Members</span>
     </button>
-    <button class="home-button" routerLink="/server-error" routerLinkActive="active" ariaCurrentWhenActive="page">
+    <button routerLink="/server-error" routerLinkActive="active" ariaCurrentWhenActive="page">
         <span>XYZ</span>
-    </button>
+    </button> -->
 
-    <!-- <span>My App</span> -->
+
+    @if (user()===undefined) {
     <span class="my-spacer"></span>
-    @if (user() === undefined){
     <button routerLink="/login">
         <mat-icon>login</mat-icon>
         <span>Login</span>
     </button>
     }
-    @if (user()){
+    @if(user()){
     <button>
-
-        <span>Folower</span>
+        <span>Follower</span>
     </button>
     <button>
-
-        <span>Folowing</span>
+        <span>Following</span>
     </button>
-    }
+
+    <span class="my-spacer"></span>
     <button mat-button [matMenuTriggerFor]="menu">{{user()?.display_name}}</button>
     <mat-menu #menu="matMenu">
-        <button mat-menu-item>Item 1</button>
-        <button mat-menu-item>Item 2</button>
-        <button (click)="logOut()">
-            <mat-icon>logOut</mat-icon>
-            <span>logOut</span>
+        <button mat-menu-item routerLink="/profile">
+            <mat-icon>manage_accounts</mat-icon>
+            Profile
+        </button>
+        <button mat-menu-item (click)="logOut()">
+            <mat-icon>logout</mat-icon>
+            <span>Logout</span>
         </button>
     </mat-menu>
+    }
 
 </mat-toolbar>
