--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,1 +1,45 @@
-<p>profile works!</p>
+@if (user) {
+<div class="profile-container">
+    <mat-tab-group>
+        <mat-tab label="Profile">
+            <form (ngSubmit)="onSubmit()" #form="ngForm" autocomplete="off"></form>
+            <mat-form-field>
+                <mat-label>Display Name</mat-label>
+                <input matInput [(ngModel)]="user.display_name" name="display_name">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Introduction</mat-label>
+                <textarea input matInput [(ngModel)]="user.introduction" name="introduction" rows="6"></textarea>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Interest</mat-label>
+                <textarea input matInput [(ngModel)]="user.interest" name="interest" rows="6"></textarea>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Looking_for</mat-label>
+                <mat-select matInput [(ngModel)]="user.looking_for" name="looking_for"></mat-select>
+                <mat-option value="male">Male</mat-option>
+                <mat-option value="female">Female</mat-option>
+                <mat-option value="all">All</mat-option>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Gender</mat-label>
+                <mat-select matInput [(ngModel)]="user.gender" name="gender"></mat-select>
+                <mat-option value="male">Male</mat-option>
+                <mat-option value="female">Female</mat-option>
+                <mat-option value="all">All</mat-option>
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Location</mat-label>
+                <input matInput [(ngModel)]="user.location" name="location">
+            </mat-form-field>
+            <button mat-raised-button type="submit" [disabled]="form.invalid || form.dirty">Save</button>
+
+        </mat-tab>
+        <mat-tab label="Protos">
+
+        </mat-tab>
+    </mat-tab-group>
+
+</div>
+}
