--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -37,7 +37,7 @@
 
         </mat-tab>
         <mat-tab label="Protos">
-
+            <app-photo [user]="user"></app-photo>
         </mat-tab>
     </mat-tab-group>
 
