--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+@if (!user()){
+<div class="container">
+    <div class="welcome">
+        <h1>Welcome to Tinner</h1>
+        <h3>Comon on it view you</h3>
+        <p>alll youuuu nedddd to is <a href="/login"> Sing-in Or Create an Account</a></p>
+    </div>
+</div>
+}
+@if (user()){
+<app-member></app-member>
+}
